[package]
name = "normal-heights"
version = "0.1.0"
authors = ["Jon Olin"]
edition = "2018"
license = "MIT"
description = "Creates normal maps from height maps."
readme = "README.md"
repository = "https://github.com/8bittree/normal_heights"
categories = [
    "command-line-utilities",
    "game-development",
    "graphics",
    "multimedia::images",
]
keywords = [
    "normal-map"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "^2.33.1"
image = "0.23.7"
